--- a/byeongmin/3.결합모델 예측데이터 값 출력.ipynb
+++ b/byeongmin/3.결합모델 예측데이터 값 출력.ipynb
@@ -197,36 +197,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "122d824d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gjaischool1\\anaconda3\\envs\\machine\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but OneHotEncoder was fitted with feature names\n",
-      "  warnings.warn(\n"
+     "ename": "NameError",
+     "evalue": "name 'ohe' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[43mohe\u001b[49m\u001b[38;5;241m.\u001b[39mtransform([[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m data[행정명]\u001b[39m\u001b[38;5;124m'\u001b[39m]])\n\u001b[0;32m      2\u001b[0m res\u001b[38;5;241m.\u001b[39mtoarray()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ohe' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "res = ohe.transform([[' 광산구 도산동']])\n",
+    "res = ohe.transform([[' data[행정명]']])\n",
     "res.toarray()"
    ]
   },
@@ -665,17 +653,10 @@
     }
    ],
    "source": [
-    "feature_names = [f'Feature {i+1}' for i in range(len(feature_importance))]\n",
     "\n",
-    "# 막대 그래프 그리기\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.bar(feature_names, feature_importance)\n",
-    "plt.xticks(rotation=90)  # x축 레이블 회전\n",
-    "plt.xlabel('Feature')\n",
-    "plt.ylabel('Importance')\n",
-    "plt.title('Feature Importance')\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n"
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
