--- a/byeongmin/4.결합모델 최종 코드(단지명제외).ipynb
+++ b/byeongmin/4.결합모델 최종 코드(단지명제외).ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3a5766fb",
+   "id": "e7540c0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a2e2d16d",
+   "id": "afd3d156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6f8b0119",
+   "id": "c271ae39",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4601ea70",
+   "id": "ae2f7059",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "88110d49",
+   "id": "114ec3a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "264aa1cc",
+   "id": "3023f745",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "ff871c59",
+   "id": "7dc69c52",
    "metadata": {},
    "outputs": [
     {
@@ -686,8 +686,7 @@
     "# 시계열 모델 학습\n",
     "model = ARIMA(data.set_index('계약날짜')['거래금액(만원)'], order=(1, 1, 1))  \n",
     "model_fit = model.fit()\n",
-    "arima_forecast = model_fit.forecast(steps=len(X_test))  # 테스트 데이터 크기만큼 ...............................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................                                                                                      미래 값을 예측\n",
-    "\n",
+    "arima_forecast = model_fit.forecast(steps=len(X_test))  # 테스트 데이터 크기만큼 \n",
     "# 앙상블 모델 학습\n",
     "rf_model = RandomForestRegressor()  # 랜덤 포레스트 모델의 파라미터는 적절히 설정해야 합니다.\n",
     "rf_model.fit(X_train, y_train)\n",
@@ -708,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "74fe9c51",
+   "id": "9af0c0f5",
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "934fdd99",
+   "id": "3a14f8b7",
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "8397a860",
+   "id": "9ac0a1c3",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "66123a6d",
+   "id": "d6936ee7",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "bf9598d5",
+   "id": "335c096c",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "5fe7a035",
+   "id": "4f1880cd",
    "metadata": {},
    "outputs": [
     {
@@ -1018,10 +1017,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ad4b7699",
+   "execution_count": 66,
+   "id": "a99843bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'feature_importance' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[66], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m feature_names \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFeature \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mfeature_importance\u001b[49m))]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# 막대 그래프 그리기\u001b[39;00m\n\u001b[0;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'feature_importance' is not defined"
+     ]
+    }
+   ],
    "source": [
     "feature_names = [f'Feature {i+1}' for i in range(len(feature_importance))]\n",
     "\n",
@@ -1039,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81256ded",
+   "id": "bd5c11d2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1047,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2928d4dc",
+   "id": "493552b1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1055,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac65dd4",
+   "id": "828664e8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1063,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61db29c6",
+   "id": "6f49adf9",
    "metadata": {},
    "outputs": [],
    "source": []
