--- a/byeongmin/4.EDA/기초EDA.ipynb
+++ b/byeongmin/4.EDA/기초EDA.ipynb
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "46f922c2",
+   "id": "7e2234d4",
    "metadata": {},
    "outputs": [
     {
@@ -1018,6 +1018,386 @@
     "print(\"Mean Squared Error:\", mse)\n",
     "print('Route Mean Squared Error:',rmse)\n",
     "print(\"R-squared:\", r2)x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "25680340",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>전용면적(㎡)</th>\n",
+       "      <th>계약년월</th>\n",
+       "      <th>층</th>\n",
+       "      <th>건축나이</th>\n",
+       "      <th>거래건수</th>\n",
+       "      <th>기준금리</th>\n",
+       "      <th>법정동코드</th>\n",
+       "      <th>지하철역수</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>46644</th>\n",
+       "      <td>71.5672</td>\n",
+       "      <td>202011</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>2920010700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329695</th>\n",
+       "      <td>59.7600</td>\n",
+       "      <td>200910</td>\n",
+       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>95</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>2915511500</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150680</th>\n",
+       "      <td>84.9568</td>\n",
+       "      <td>201611</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>2920012300</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398547</th>\n",
+       "      <td>59.3556</td>\n",
+       "      <td>200606</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>128</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>2920010800</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132801</th>\n",
+       "      <td>84.8400</td>\n",
+       "      <td>201706</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>2917011700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259178</th>\n",
+       "      <td>84.8198</td>\n",
+       "      <td>201112</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>233</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>2920012700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365838</th>\n",
+       "      <td>39.9300</td>\n",
+       "      <td>200802</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>306</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2914012100</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131932</th>\n",
+       "      <td>59.9900</td>\n",
+       "      <td>201709</td>\n",
+       "      <td>12</td>\n",
+       "      <td>19</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>2917010800</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146867</th>\n",
+       "      <td>59.7480</td>\n",
+       "      <td>201603</td>\n",
+       "      <td>18</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>2920011800</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121958</th>\n",
+       "      <td>133.0200</td>\n",
+       "      <td>201709</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>2920012700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>340063 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         전용면적(㎡)    계약년월   층  건축나이  거래건수  기준금리       법정동코드  지하철역수\n",
+       "46644    71.5672  202011  10     6    41  0.50  2920010700      0\n",
+       "329695   59.7600  200910  15    16    95  2.00  2915511500      0\n",
+       "150680   84.9568  201611  10     7    50  1.25  2920012300      0\n",
+       "398547   59.3556  200606  10     6   128  4.25  2920010800      0\n",
+       "132801   84.8400  201706   7    22    29  1.25  2917011700      0\n",
+       "...          ...     ...  ..   ...   ...   ...         ...    ...\n",
+       "259178   84.8198  201112   1     3   233  3.25  2920012700      0\n",
+       "365838   39.9300  200802   6     6   306  5.00  2914012100      0\n",
+       "131932   59.9900  201709  12    19    31  1.25  2917010800      0\n",
+       "146867   59.7480  201603  18    10    51  1.50  2920011800      0\n",
+       "121958  133.0200  201709   8     4    38  1.25  2920012700      0\n",
+       "\n",
+       "[340063 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.to_csv('EDA완료 X_train')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "de2e3645",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>전용면적(㎡)</th>\n",
+       "      <th>계약년월</th>\n",
+       "      <th>층</th>\n",
+       "      <th>건축나이</th>\n",
+       "      <th>거래건수</th>\n",
+       "      <th>기준금리</th>\n",
+       "      <th>법정동코드</th>\n",
+       "      <th>지하철역수</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>351536</th>\n",
+       "      <td>59.9000</td>\n",
+       "      <td>200801</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>74</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2920011500</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245472</th>\n",
+       "      <td>59.8500</td>\n",
+       "      <td>201206</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>2911010900</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257689</th>\n",
+       "      <td>84.9763</td>\n",
+       "      <td>201105</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>158</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>2920011700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103411</th>\n",
+       "      <td>151.8000</td>\n",
+       "      <td>201808</td>\n",
+       "      <td>4</td>\n",
+       "      <td>23</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>2915510500</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416268</th>\n",
+       "      <td>132.2100</td>\n",
+       "      <td>200601</td>\n",
+       "      <td>14</td>\n",
+       "      <td>9</td>\n",
+       "      <td>27</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>2917012700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358612</th>\n",
+       "      <td>59.9900</td>\n",
+       "      <td>200804</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>115</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2917011200</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106954</th>\n",
+       "      <td>84.9300</td>\n",
+       "      <td>201809</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>2911011000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209670</th>\n",
+       "      <td>51.9400</td>\n",
+       "      <td>201404</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>2917010500</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44485</th>\n",
+       "      <td>85.0000</td>\n",
+       "      <td>202110</td>\n",
+       "      <td>2</td>\n",
+       "      <td>29</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>2914011900</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400059</th>\n",
+       "      <td>84.0624</td>\n",
+       "      <td>200610</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>85</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>2920011900</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>85016 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         전용면적(㎡)    계약년월   층  건축나이  거래건수  기준금리       법정동코드  지하철역수\n",
+       "351536   59.9000  200801   1    11    74  5.00  2920011500      0\n",
+       "245472   59.8500  201206   8    16     6  3.25  2911010900      0\n",
+       "257689   84.9763  201105   1     8   158  3.00  2920011700      0\n",
+       "103411  151.8000  201808   4    23    30  1.50  2915510500      0\n",
+       "416268  132.2100  200601  14     9    27  3.75  2917012700      0\n",
+       "...          ...     ...  ..   ...   ...   ...         ...    ...\n",
+       "358612   59.9900  200804   2    14   115  5.00  2917011200      0\n",
+       "106954   84.9300  201809   1    31    12  1.50  2911011000      0\n",
+       "209670   51.9400  201404   7     9    10  2.50  2917010500      0\n",
+       "44485    85.0000  202110   2    29    62  0.75  2914011900      1\n",
+       "400059   84.0624  200610   7     5    85  4.50  2920011900      0\n",
+       "\n",
+       "[85016 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
    ]
   }
  ],
