--- a/mhj/gjMap_csv _to_json_mhj.ipynb
+++ b/mhj/gjMap_csv _to_json_mhj.ipynb
@@ -199,6 +199,7 @@
     }
    ],
    "source": [
+    "# 데이터 불러오기\n",
     "df = pd.read_csv('행정_법정동 중심좌표 최종 csv.csv', encoding='euc-kr')\n",
     "df"
    ]
@@ -207,7 +208,9 @@
    "cell_type": "code",
    "execution_count": 71,
    "id": "f474a2df",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -534,6 +537,7 @@
     }
    ],
    "source": [
+    "# 데이터프레임화\n",
     "df2 = pd.DataFrame(df, columns=['법정동코드', '시군구', '읍면동', '위도', '경도'])\n",
     "df2"
    ]
@@ -556,7 +560,7 @@
     "# 데이터프레임을 JSON 파일로 내보내기\n",
     "output_file = 'outputFinal2.json'\n",
     "with open(output_file, 'w', encoding='utf-8') as json_file:\n",
-    "    json_file.write(df2.to_json(orient='records', force_ascii=False, indent=2))\n",
+    "    json_file.write(df2.to_json(orient='records', force_ascii=False, indent=2)) # indent = 줄바꿈 \n",
     "print('JSON 파일이 생성되었습니다.')"
    ]
   },
