--- a/ksw/policy.ipynb
+++ b/ksw/policy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "74f0e0c2",
    "metadata": {
     "scrolled": true
@@ -13,8 +13,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pytesseract in c:\\users\\gjaischool1\\anaconda3\\lib\\site-packages (0.3.10)\n",
-      "Requirement already satisfied: packaging>=21.3 in c:\\users\\gjaischool1\\anaconda3\\lib\\site-packages (from pytesseract) (22.0)\n",
-      "Requirement already satisfied: Pillow>=8.0.0 in c:\\users\\gjaischool1\\anaconda3\\lib\\site-packages (from pytesseract) (9.4.0)\n"
+      "Requirement already satisfied: Pillow>=8.0.0 in c:\\users\\gjaischool1\\anaconda3\\lib\\site-packages (from pytesseract) (9.4.0)\n",
+      "Requirement already satisfied: packaging>=21.3 in c:\\users\\gjaischool1\\anaconda3\\lib\\site-packages (from pytesseract) (22.0)\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "d9724b5a",
    "metadata": {
     "scrolled": true
@@ -40,7 +40,7 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: opencv-python in c:\\users\\gjaischool1\\anaconda3\\lib\\site-packages (4.8.0.74)\n",
-      "Requirement already satisfied: numpy>=1.21.2 in c:\\users\\gjaischool1\\anaconda3\\lib\\site-packages (from opencv-python) (1.23.5)\n"
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\gjaischool1\\anaconda3\\lib\\site-packages (from opencv-python) (1.23.5)\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "126cbe22",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "043ee909",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "'5ㆍ10대책(2022.5.10다주택자 양도세 중과 한시적 배제1가구1주택양도세:비과세보유및거주기간재기산제도폐지일시적 1가구 2주택비과세요건 완화6ㆍ21대책 | 임대료 5%이내 상한시 양도소득세비과세 2년 거주요건면제(20226.21) ｜생애첫주택구입시 200만원한도내취득세면제20 대팩 | 성야최초주택구마자의7상한80%완화8ㆍ16대책 ｜ㅣ270만가구규모주택공급(2022.8.16) ㅣ2024년까지 1기신도시재정비마스터플랜수립9:1대책 | 임차인 법적권리강화(2022.9.1) ㅣ 보증금미반환피해지원이 대펙| 재건축 부담금 합리화방안,버10대랙 | 무주택자75046일원화조기시랭선순위임차인 정보확인권신설11ㆍ21대책 ㅣ체납정보확인권신설(2022.11.21) ㅣ최우선변제금상향조정주택임대차표준계약서 개정2     재건축 안전진단기준완화아가 매해 | 전용면적85며이하중소형아파트임대사업부할강남3구,용산구제외한모든지역투기과열지구및조정대상지역해제전매제한완화1:3대책 | 분양가상한제실거주의무폐지(2023.1.3) ㅣ중도금대출기준전면폐지무순위청약자격조건완화주택청약당첨자 기존주택처분의무폐지자가진단안심전세앰출시은 대펴ㅣ | 전세가을 1009ㄱ90%하향221 | 저리대출보증금 요건 3억원 완화,대출액 한도 2.4억원확대.             전세사기피해자 인정시 우선매수권 특례 부여사27대백 | 너공공마입거주세제ㆍ금융지원[그래픽=홍종현미술기자]                                                6046\\\\05014'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "76b55a26",
    "metadata": {},
    "outputs": [
@@ -138,17 +138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "d22d9556",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"6ㆍ19대책(2017.6.19)8ㆍ2대책(2017.8.2)9ㆍ13 대책(2018.9.13)12ㆍ16대책(2019.12.16)2ㆍ20 대책(2020.2.20)5'6대책(2020.5.6)617 대책(2020.6.17)주택시장 안정적관리 위한 선별적맞춤조정대상ㅅ여담보인정비율(1\\\\/)ㆍ종부채상환비율(1) 등 대출규제 강화실수요보호와 단기투기수요 억제통한주택시장안정화 방투기지역:투기과열지구 지정, 재건축재개발규제 정비,양도소득세강화, 7'/-01금융규제강화,자금조달계획신고 의무화, 특별사번경찰제도입등「우조정대상지역 2주택 이상 보유자에 대한 주택분 종부 최고세율최고 3.2%중과, 세부담 상한 150%에서 300%로 상향,과표 3억^~~6억원 구간 신설 및 세율 0.2%6 인상 등주택이상보유자와서울:세종전역및경기일부등집값급등한조정대상지역 2주택 이상 보유자에 대해주택분 종부세세율 최고 4.0%로 중과.세 부담상한도 200%에서 300%로 상향 등경기도수원,안양등조정대상지역지정.조정대상지역ㆍ: 2ㄴㅇㅇ (=)         2스1ㅋㄱ주택담보대출비율) 60%에서 50%로조정 등2 ㄱ버아파트공급등신도시조기분양수도권 주택공급 기반 강화 방안, 서울 용산역 정비창에 8천가구지  교 개박 므인천:다전등투기과열지구다폭확대및수도권절반'대전:청주등조정대상지역으로 지정.재건축 조합원 아파트 분양받으려면2년 실거주 ,법인보유주택 종합부동산세 3~/4%적용,전규제지역내주택구임위해주택담보다출받는 경우6개월내 처분:전입 의무 부과. 전세대줄로 투기지역:투기과열지구에서 3억원초과아파트 매수시전세대출즉시회수해캡투자차단등7ㆍ10 대책(2020.7.10)8ㆍ4디책(2020.8.4)1119전세대책(2020.11.19)1217주가규제(2020.1217)/20201227종합부동산세, 양도소득세, 취득세, 재산세 등 세율 인상 및스실수요자 부담 경감등주택공급 확대부동산시장안정회를 위한수도권공공임대및공공분양포함13.2만+호규모신규주택추가 공급,태릉골프장부지등추가택지가발서민ㆍ중산층 주거안정 지원방안, 2022년까지 다세대 매입임대중심 공공임대 11만4천100가구 공급(수도권 7만1천400가구,부산:대구ㆍ경기 김포 일부 지역 등 7곳 조정대상지역 지정지방광역시부산:대구-광주-울산등4개시23곳지방 도시파주-천안동남등11개시13개지역신규 지정.17일현재전국조정대상지역111곳-투기과열지구는 49곳트위터 @*001190_91901165 페이스북1106.1471@/41\""
+       "'(2022.5.10}6ㆍ21대책(2022.6.237-20대책(2022.7.208-16대책(20228.1991대책(2022.94?ㆍ29대책(2022.9.29)11ㆍ10대책 ㅣ(2022.11.1011ㆍ21대책(2022.11.22)12:ㆍ8대책(2022.12.8)12ㆍ21대책(2022.12.2201ㆍ3대책(2023.13)2.2대책(2023.22)4ㆍ27대책(2023.4.27)다주택자 양도세 중과 한시적 배제1가구1주택양도세ㆍ비과세보유및 거주기간재기산제도폐지일시적 1가구2주택비과세요건완화임대료 59%이내 상한시 양도소득세비과세 2년 거주요건 면제생애첫주택구입시 200만원한도 내취득세면제생애최초주택구매자의 1 상한 80% 완화.270만가구규모주택공급.2024년까지1기신도시 재정비 마스터플랜 수립임차인 법적권리 강화보증금 미반환피해 지원보\\\\컨죽부담금 합리화방안무주택자 508 일원화 조기 시행선순위 임차인 정보확인권신설체납정보 확인권신설최우선변제금상향조정주택임대차표준계약서개정재건축 안전진단기준 완화전용면적85 이하 중소형 마파트임대사업 부:강남3구,용산구제외한 모든 지역 투기과열지구 및조정 대상지역해제전매제한완화분양가상한제 실거주의무페지중도금 대출 기준 전면 폐지무순위 청약 자격조건 완화주택 청약당첨자 기존주택처분 의무폐지자가진단안심전세앰출시전세가율 100%6->90%6하향저리대출보중금 요건 3억원 완화, 대출액 한도 2.4억원 확대전세사기피해자 인정시 우선매수권 특례 부여내!공공매입 거주세제ㆍ금융지원[그래픽=홈종현미술기자]                                                <0146\\\\501부'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
     "yoon3 = pytesseract.image_to_string(yoon2, lang = 'kor')\n",
     "yoon3\n",
     "# 개행삭제\n",
-    "yoon3_text = moon3.replace(\"\\n\", \"\")\n",
+    "yoon3_text = yoon3.replace(\"\\n\", \"\")\n",
     "yoon3_text"
    ]
   },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "83b2f82c",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "269380c4",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "\"6:ㆍ19대책(2017.6.19)8ㆍ2대책(2017.8.2)9ㆍ13 대책(2018.9.13)12:ㆍ16 대책(2019.12.162:ㆍ20 대책(2020.2.20)5ㆍ6다책(2020.5.66ㆍ17 대책(2020.6.17)7:ㆍ10 대책(2020.7.108ㆍ4대책(2020.8.4)1119전세 대책(2020.1119)1217주가규제(2020.1217)/20201227주택시장안정적관리 위한 선별적 맞춤형 ㅁ조정대상ㅅ여담보인정비율(1'\\\\/):총부채상환비율(01|)실수요보호와 단기투기수요 억제 통한주택시장안정화방투기지역:투기과열지구지정, 재건축재개발규제 정비,양도소득세 강화, '\\\\/ㆍ01|금융규제 강화,자금조달계획신고 의무화, 특별사법경찰제도입등「우조정대상지역 2주택 이상 보유자에 대한 주택분 종부 최고세율최고 3.2%중과, 세부담 상한 150%에서 300%로 상향,과표 3억^~6억원 구간 신설 및 세율 0.2%6 인상 등주택이상보유자와서울-세종전역및경기일부등집값급등한 조정대상지역 2주택 이상 보유자에 대해주택분 종부세담 상한도 200%에서 300%로 상향 등경기도수원 인양등조정대상지역지정.조정대상지역2060            2^1ㅋㄱ주택담보대출비율[7'/)60%에서 50%로조정 등수도권주택공급 기반 강화 방안, 서울 용산역 정비창에 8천가구아파트 공급등 서울 도심 유휴부지 18곳가발및 수도권 3기신도시조기분양등인천:대전등투기과열지구대폭확대및수도권절반:대전:청주등조정대상지역으로 지정,재건축 조합원 아파트 분양받으려면2년 실거주,법인보유주택종합부동산세 3~4%적용,전규제지역내주택구입위해주택담보대출 받는 경우 6개월내 처분:전입 의무 부과, 전세대출로투기지역:투기과열지구에서 3억원초과아파트 매수시전세대출즉시회수해투자차단등종합부동산세, 양도소득세, 취득세, 재산세 등 세율 인상 및스부동산시장안정화를위한수도권공공임대및공공분양포함13.2만+0호규모신규주택추가 공급 태름골프장부지등추가택지가발서민-중산층 주거안정 지원방안, 2022년까지 다세대 매입임대중심 공공임대 11만4천100가구 공급(수도권 7만1천400가구,부산:대구ㆍ경기 김포 일부 지역 등 7곳 조정대상지역 지정지방 광역시부산:대구-광주-울산등 4개시23곳,지방도시'파주-천안동남등11개시13개지역신규지정.17일 현재전국 조정대상지역 111곳-투기과열지구는 49곳6@연합뉴스트위터 @/00190_013901105 페이스북1176/.4/Ｌ@/41\""
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "5da5ef54",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "71e76544",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
        "\"6ㆍ19대책(2017.6.19)8ㆍ2대책(2017.8.2)9ㆍ13 대책(2018.9.13)12ㆍ16대책(2019.12.16)2ㆍ20 대책(2020.2.20)5'6대책(2020.5.6)617 대책(2020.6.17)주택시장 안정적관리 위한 선별적맞춤조정대상ㅅ여담보인정비율(1\\\\/)ㆍ종부채상환비율(1) 등 대출규제 강화실수요보호와 단기투기수요 억제통한주택시장안정화 방투기지역:투기과열지구 지정, 재건축재개발규제 정비,양도소득세강화, 7'/-01금융규제강화,자금조달계획신고 의무화, 특별사번경찰제도입등「우조정대상지역 2주택 이상 보유자에 대한 주택분 종부 최고세율최고 3.2%중과, 세부담 상한 150%에서 300%로 상향,과표 3억^~~6억원 구간 신설 및 세율 0.2%6 인상 등주택이상보유자와서울:세종전역및경기일부등집값급등한조정대상지역 2주택 이상 보유자에 대해주택분 종부세세율 최고 4.0%로 중과.세 부담상한도 200%에서 300%로 상향 등경기도수원,안양등조정대상지역지정.조정대상지역ㆍ: 2ㄴㅇㅇ (=)         2스1ㅋㄱ주택담보대출비율) 60%에서 50%로조정 등2 ㄱ버아파트공급등신도시조기분양수도권 주택공급 기반 강화 방안, 서울 용산역 정비창에 8천가구지  교 개박 므인천:다전등투기과열지구다폭확대및수도권절반'대전:청주등조정대상지역으로 지정.재건축 조합원 아파트 분양받으려면2년 실거주 ,법인보유주택 종합부동산세 3~/4%적용,전규제지역내주택구임위해주택담보다출받는 경우6개월내 처분:전입 의무 부과. 전세대줄로 투기지역:투기과열지구에서 3억원초과아파트 매수시전세대출즉시회수해캡투자차단등7ㆍ10 대책(2020.7.10)8ㆍ4디책(2020.8.4)1119전세대책(2020.11.19)1217주가규제(2020.1217)/20201227종합부동산세, 양도소득세, 취득세, 재산세 등 세율 인상 및스실수요자 부담 경감등주택공급 확대부동산시장안정회를 위한수도권공공임대및공공분양포함13.2만+호규모신규주택추가 공급,태릉골프장부지등추가택지가발서민ㆍ중산층 주거안정 지원방안, 2022년까지 다세대 매입임대중심 공공임대 11만4천100가구 공급(수도권 7만1천400가구,부산:대구ㆍ경기 김포 일부 지역 등 7곳 조정대상지역 지정지방광역시부산:대구-광주-울산등4개시23곳지방 도시파주-천안동남등11개시13개지역신규 지정.17일현재전국조정대상지역111곳-투기과열지구는 49곳트위터 @*001190_91901165 페이스북1106.1471@/41\""
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "efc75c37",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "\"3년6개월간 박근혜정부 부동산대책 및 주요내용           글        202013 41 - 서민 주거안정을 위한        -미분양신축주택 외에 기존주택도 양도세 5년간 면제주택시장 정상화 종합대책 -분양가상한제 신축운명, 리모델링 수직증축 허용7.24 4 후속조치                .-건설사 대상 모기지보증-전세보증금 반환보증 시행|                               -민간부분 주택공급조절 본격 시행.8.28 서민 중산층 주거안정을  -취득세을 영구인하위한 전월세 대책          -연 1%대 초저리 수익:손익공유형 모기지 지원123 ㅣ 4-1.8-28후속조치 . ㅣ-목돈 안드는 전세 보완 행복주택 축소-공유형 모기지 본사업 시행(1만5000가귀'2014 226 ㅣ 임대차씨장선진화 방안 -민간주도의 '임대주택리츠 를 활성화-윈대소득과써방식정비연간 2000만원 이하 분리과세)7.24 새경제팀의                -주택담보대출 규제완화7'/ㆍ01 전금융권 70% 일괄 적용}경제정책 방향               -청약통장 일원해(주택청약종합저축|로 재형기능 강화9.1 주택시장 활력회복 및        -재건축 연한규제 완해(최장 40년~30년)서민주거안정 강화 방안 -수도권 청약 1~<순위 통합 및 기간단축(2년…1년)10.30 | 서민주거비부담            -다양한 방식의 공공임대 공급확대(공공임대리츠 1만가구 확대 등}완화 방안                    -준공공임대주택 활성해(의무임대기간 10년-8년, 나1 매입확약 등}2015 . 113 중산층 주거혁신 방안       -중산층을 위한 기업형임대 뉴스테이 도입-왼간임대주택 특별법 도입46 서인주거비부담            -윈차보금 반환보증 지원경화완화방안                    -월서몰 지원요건 완화92 -서민-종총               -집주인 리모델링 제도 도입해 독거노인, 대학생 등 1인가구에 공금. .주건8화방안 . . ㅣ -뉴스티이 활성화 정비시업규저하화2016 . 428 맞춤형 주거지원을 통한 ㅣ -형복주택-뉴스테이 광급몰랑을 2017년까지 총 30만가구로 확대주거비 감방안            -저소득 및 생애주기벌 특화형 임대주택 공급 확대.8.25 가계부채 관리 방안           ㅡ11 택지공급 조절, 마대출심사 강화, 분양보증 예비심사 도입-중도금대출보증 개센보증건수 2건 제한 부분보증 도입)그래픽: 김현정 디자이너\""
       ]
      },
-     "execution_count": 45,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "148ef4c2",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "\"20183 41  -서민주거안점을 뭐한        -미분양ㆍ신축주택 외에 기존주택도 암도세 5년간 면제주택시장 정상화 종합대책. -분양가상한제 신축운영 리모엘링 수직증축 허용7.24 6 후속조치             -건설사 대상 모기지보증ㆍ전세보증금 반환보증 시챙-인간부분 주택공급조절 본격 시행828 서민 중산충주거만정을 . -취득서울 영구인하위한 전 월세 대책          -연 1%대 초저리 수익-손익공유령 모기지 지원123  411.8ㆍ08 후속조치         목돈 안드는 전세 보완. 챙복주택 축소-공유형 모기지 본싸업 시행(1만5000가귀2014 2.26 임대차시장 선진화 방안           주도의 '임대주택리츠'를 활성화소득 과서방식정비(연간 2000만원 이하 분리과세7.24 새점씨팀의                 -주팩담보대출 규제완화17/‥07 전금융권 70% 일괄 적용}경제정책 방향               -청약동장 일뭔해주택청약종할저최로 재형기능 깅화9! ： 주택시장 활력회복 및         -재건축 연한규제 완화(최장 40년-30년!서민주겨안장 감화 방안 수도권 청약 1~<2순위 통합 및 기간단축(2년ㅡ…1년)10.30 서민주거바루담            -다양한 방식의 공공임대 공급확대(공공임대2츠 1만가구 확대 등완화 방만                     -준공공임대주택 환성해(의무임대기간 10년-8년, 1 매입확약 동)2015 113 중산춤주거혁신 방안       -줌산충을 위한 기업혐임대 뉴스테0 도맘-민간임대주택 특별법 도입46  -서민주거비부담            .-임차보증금 반환보중 지원 강화완화 방안                    -월세대출 지원요건 완화92 서민-중산춤               -진주인 리모델링 제도 도입해 독거노인, 대학생 동 1인가구에 공급: 주거안정강화 방안           -뉴스테이 활성희, 정비사업 규저함리화2016 4.28 맞춤형주거치원을 동한  -행복주택ㆍ뉴스테이 공금물량을 2017년까지 총 30만가구로 확대주거비 경감 방안           저소득층 및 생애주기별 특화형 임다주택 공급 확대묘25 - 가계부채 관리 방안        -나1 택지공급 조껄, 마대훌심사 강화. 분양보증 며비심사 도입-중도금대줄보증 개센보증건수 2건 져한, 무분보증 도많)그래픽: 길현정 디자이너\""
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "7aab3821",
    "metadata": {},
    "outputs": [
@@ -392,15 +392,14 @@
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'lee1_text' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# 개행삭제\u001b[39;00m\n\u001b[0;32m     12\u001b[0m lee1_0text \u001b[38;5;241m=\u001b[39m lee1\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 13\u001b[0m \u001b[43mlee1_text\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'lee1_text' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "\"이명박 정부 부동산대책 일지\\n\\n.6.11지방미분양상황평가 및 정책 대응 방향\\n -지방 미문양주택취득시 취.등록세 50%김면\\n -일씨적 가구 2주랙중복보유 허용기간 1--2년완화\\n.8.21 주택공급 기반 강화 및 건설경기 보완방안\\n-재건촉재개발)안전진단2회-1회축소\\n -2종일반주거지역충수 15--18층완화\\n-인천검단및 오산세교지구신도시급으로 확대\\n-수도쿼전매제한기간5~10년-1~7년완화\\n-지방 미분양 아파트 환매조건부매입\\n.9.19 도심 공급 활성화 및 보금자리 주택 건설 방안\\n-10년간500만가귀보금자리주택 150만가구 포함) 건설\\n-대체주택(1^-2인 가구응 오피스텔, 기숙사형주택) 확대\\n-1000규모그린벨트해제\\n-사전예약 방식주택청약제도입\\n10.21 가계주거부담 완화 및 건설부문 유동성 지원 방안\\n -일씨적 1가구2주택자중목보유 허용기간 1--2년전국 확대\\n -투기지역 및투기과열지구 합리적조정\\n -대한주택보증 환매조건부 미문양주택 2조원규모 매입\\n -건설업체 신용위험평가4~-0등급)거쳐구조조정\\n11.3경제난국극복종합대책\\n -재건축 용적률 법적한도(3009%까지허용\\n -광남3구제외한주택투기과열지구 투기지역등 하제\\n\\n에09 . 6.222서시장안정4족\\n\\n-주택기금 전세자금 지원 및 민간전세때출보증한도 확대\\n69     -도시형 생활주택 및 오피스텔 규제완화\\n\\n'8.27서민주거안정을 위한 보금자리주택 공급 확대 방안\\n-보금자리주택 2012년까지 32만가구 건셀(연 3만-8만가구)\\n-하반기 보금자리주택지구 5~6곳지정\\n-위례신도시 4만3천가구 중 2만2천가구 보금자리 배정\\n-생애최초주택청약제도 도입\\n\\n.4.23주택 미분양해소 및 거래 활성화 방안\\n\\n -미분왕주택 4만가구김축\\n\\n-종전주택새주택을 분양받은 입주예정재구입자메'완화\\n.8.29추가부동산대책발표\\n\\n무주택 ㆍ주택자071규제한시적해제\\n\\n -나년 3원말까지금융회사자율 심사 ㆍ결정\\n\\n -다주택임도세중과완화 2년, 취등록세김면 년연장\\n\\n -부금자리사전예약 축소 연기 민간주택 공급비율 싱향조정\\n\\n1008매스\\n\\n잠성구 기자 900994076.0010 20100829\\n@0\\\\0_913009트위터)\\n\""
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -415,8 +414,8 @@
     "lee1\n",
     "\n",
     "# 개행삭제\n",
-    "lee1_text = lee1.replace(\"\\n\", \"\")\n",
-    "lee1_text"
+    "#lee1_text = lee1.replace(\"\\n\", \"\")\n",
+    "#lee1_text"
    ]
   },
   {
