--- a/byeongmin/5,6모델 사용/모델 여러가지 사용 단지명만 토큰화해서.ipynb
+++ b/byeongmin/5,6모델 사용/모델 여러가지 사용 단지명만 토큰화해서.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ba28dadc",
    "metadata": {},
    "outputs": [],
@@ -195,21 +195,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e8a82ff6",
+   "cell_type": "markdown",
+   "id": "2890b564",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "lrmodel = LinearRegression(n_jobs=-1)\n",
-    "ridge = Ridge(alpha=0.8, random_state=1)\n",
-    "lasso = Lasso(alpha = 0.01, random_state=1)\n",
-    "enet = ElasticNet(alpha=0.03, l1_ratio=0.01, random_state=1)\n",
-    "d_tree = DecisionTreeRegressor(max_depth=6, min_samples_split=10, min_samples_leaf=15, random_state=1)\n",
-    "rf = RandomForestRegressor(n_estimators=100,  max_depth=9, min_samples_split=50,\n",
-    "                           min_samples_leaf=5, random_state=1, n_jobs=-1)\n",
-    "model_xgb = XGBRegressor(n_estimators=100, max_depth=9, min_child_weight=5, gamma=0.1, n_jobs=-1 )\n",
-    "model_lgb = LGBMRegressor(n_estimators=100, max_depth=9, min_child_weight=5, n_jobs=-1)"
+    "##### lrmodel = LinearRegression()\n",
+    "ridge = Ridge()\n",
+    "lasso = Lasso()\n",
+    "enet = ElasticNet()\n",
+    "d_tree = DecisionTreeRegressor()\n",
+    "rf = RandomForestRegressor()\n",
+    "model_xgb = XGBRegressor()\n",
+    "model_lgb = LGBMRegressor()"
    ]
   },
   {
@@ -521,10 +518,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7498c6fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m X_predict \u001b[38;5;241m=\u001b[39m [[\u001b[38;5;241m84\u001b[39m, \u001b[38;5;241m202301\u001b[39m,\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m28\u001b[39m ,\u001b[38;5;241m15\u001b[39m,\u001b[38;5;241m3.5\u001b[39m,\u001b[38;5;241m2915511500\u001b[39m,\u001b[38;5;241m0\u001b[39m]]\n\u001b[1;32m----> 2\u001b[0m X_predict_df\u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame(X_predict,columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m전용면적(㎡)\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m계약년월\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m층\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m건축나이\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m거래건수\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m기준금리\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m법정동코드\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m지하철역수\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "X_predict = [[84, 202301,10,28 ,15,3.5,2915511500,0]]\n",
     "X_predict_df= pd.DataFrame(X_predict,columns=['전용면적(㎡)', '계약년월','층', '건축나이','거래건수','기준금리','법정동코드','지하철역수'])"
