--- a/mhj/gjMap_csv _to_json_mhj.ipynb
+++ b/mhj/gjMap_csv _to_json_mhj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1a4aaf8c",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "id": "186a7cc0",
    "metadata": {},
    "outputs": [
@@ -39,71 +39,53 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>법정동코드</th>\n",
-       "      <th>시도</th>\n",
-       "      <th>시군구</th>\n",
-       "      <th>읍면동</th>\n",
-       "      <th>하위</th>\n",
-       "      <th>위도</th>\n",
-       "      <th>경도</th>\n",
-       "      <th>코드종류</th>\n",
+       "      <th>code</th>\n",
+       "      <th>month6</th>\n",
+       "      <th>year1</th>\n",
+       "      <th>year2</th>\n",
+       "      <th>year3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2911052500</td>\n",
-       "      <td>광주광역시</td>\n",
-       "      <td>동구</td>\n",
-       "      <td>충장동</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.149211</td>\n",
-       "      <td>126.917783</td>\n",
-       "      <td>H</td>\n",
+       "      <td>2920011700</td>\n",
+       "      <td>35269.40</td>\n",
+       "      <td>36766.22</td>\n",
+       "      <td>38358.59</td>\n",
+       "      <td>39950.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2911054500</td>\n",
-       "      <td>광주광역시</td>\n",
-       "      <td>동구</td>\n",
-       "      <td>동명동</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.150568</td>\n",
-       "      <td>126.925425</td>\n",
-       "      <td>H</td>\n",
+       "      <td>2920010100</td>\n",
+       "      <td>35269.97</td>\n",
+       "      <td>36766.79</td>\n",
+       "      <td>38359.16</td>\n",
+       "      <td>39951.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2911056000</td>\n",
-       "      <td>광주광역시</td>\n",
-       "      <td>동구</td>\n",
-       "      <td>계림1동</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.158538</td>\n",
-       "      <td>126.919569</td>\n",
-       "      <td>H</td>\n",
+       "      <td>2915510800</td>\n",
+       "      <td>36876.11</td>\n",
+       "      <td>38372.93</td>\n",
+       "      <td>39965.30</td>\n",
+       "      <td>41557.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2911057000</td>\n",
-       "      <td>광주광역시</td>\n",
-       "      <td>동구</td>\n",
-       "      <td>계림2동</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.158130</td>\n",
-       "      <td>126.923383</td>\n",
-       "      <td>H</td>\n",
+       "      <td>2917010800</td>\n",
+       "      <td>36340.65</td>\n",
+       "      <td>37837.47</td>\n",
+       "      <td>39429.83</td>\n",
+       "      <td>41022.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2911059000</td>\n",
-       "      <td>광주광역시</td>\n",
-       "      <td>동구</td>\n",
-       "      <td>산수1동</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.157330</td>\n",
-       "      <td>126.930703</td>\n",
-       "      <td>H</td>\n",
+       "      <td>2917011400</td>\n",
+       "      <td>36340.43</td>\n",
+       "      <td>37837.26</td>\n",
+       "      <td>39429.62</td>\n",
+       "      <td>41021.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -112,95 +94,77 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>2920066000</td>\n",
-       "      <td>광주광역시</td>\n",
-       "      <td>광산구</td>\n",
-       "      <td>동곡동</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.098697</td>\n",
-       "      <td>126.772108</td>\n",
-       "      <td>H</td>\n",
+       "      <th>81</th>\n",
+       "      <td>2917010400</td>\n",
+       "      <td>36340.79</td>\n",
+       "      <td>37837.61</td>\n",
+       "      <td>39429.98</td>\n",
+       "      <td>41022.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>2920067000</td>\n",
-       "      <td>광주광역시</td>\n",
-       "      <td>광산구</td>\n",
-       "      <td>평동</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.124653</td>\n",
-       "      <td>126.760276</td>\n",
-       "      <td>H</td>\n",
+       "      <th>82</th>\n",
+       "      <td>2911010100</td>\n",
+       "      <td>38482.75</td>\n",
+       "      <td>39979.57</td>\n",
+       "      <td>41571.93</td>\n",
+       "      <td>43164.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>2920068000</td>\n",
-       "      <td>광주광역시</td>\n",
-       "      <td>광산구</td>\n",
-       "      <td>삼도동</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.128304</td>\n",
-       "      <td>126.691671</td>\n",
-       "      <td>H</td>\n",
+       "      <th>83</th>\n",
+       "      <td>2915511100</td>\n",
+       "      <td>36876.00</td>\n",
+       "      <td>38372.83</td>\n",
+       "      <td>39965.19</td>\n",
+       "      <td>41557.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>2920069000</td>\n",
-       "      <td>광주광역시</td>\n",
-       "      <td>광산구</td>\n",
-       "      <td>본량동</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.180771</td>\n",
-       "      <td>126.728816</td>\n",
-       "      <td>H</td>\n",
+       "      <th>84</th>\n",
+       "      <td>2917010200</td>\n",
+       "      <td>36340.86</td>\n",
+       "      <td>37837.68</td>\n",
+       "      <td>39430.05</td>\n",
+       "      <td>41022.41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>2920070000</td>\n",
-       "      <td>광주광역시</td>\n",
-       "      <td>광산구</td>\n",
-       "      <td>신창동</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.190432</td>\n",
-       "      <td>126.846612</td>\n",
-       "      <td>H</td>\n",
+       "      <th>85</th>\n",
+       "      <td>2915512100</td>\n",
+       "      <td>36875.65</td>\n",
+       "      <td>38372.47</td>\n",
+       "      <td>39964.83</td>\n",
+       "      <td>41557.20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>95 rows × 8 columns</p>\n",
+       "<p>86 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         법정동코드     시도  시군구   읍면동  하위         위도          경도 코드종류\n",
-       "0   2911052500  광주광역시   동구   충장동 NaN  35.149211  126.917783    H\n",
-       "1   2911054500  광주광역시   동구   동명동 NaN  35.150568  126.925425    H\n",
-       "2   2911056000  광주광역시   동구  계림1동 NaN  35.158538  126.919569    H\n",
-       "3   2911057000  광주광역시   동구  계림2동 NaN  35.158130  126.923383    H\n",
-       "4   2911059000  광주광역시   동구  산수1동 NaN  35.157330  126.930703    H\n",
-       "..         ...    ...  ...   ...  ..        ...         ...  ...\n",
-       "90  2920066000  광주광역시  광산구   동곡동 NaN  35.098697  126.772108    H\n",
-       "91  2920067000  광주광역시  광산구    평동 NaN  35.124653  126.760276    H\n",
-       "92  2920068000  광주광역시  광산구   삼도동 NaN  35.128304  126.691671    H\n",
-       "93  2920069000  광주광역시  광산구   본량동 NaN  35.180771  126.728816    H\n",
-       "94  2920070000  광주광역시  광산구   신창동 NaN  35.190432  126.846612    H\n",
+       "          code    month6     year1     year2     year3\n",
+       "0   2920011700  35269.40  36766.22  38358.59  39950.95\n",
+       "1   2920010100  35269.97  36766.79  38359.16  39951.52\n",
+       "2   2915510800  36876.11  38372.93  39965.30  41557.66\n",
+       "3   2917010800  36340.65  37837.47  39429.83  41022.20\n",
+       "4   2917011400  36340.43  37837.26  39429.62  41021.98\n",
+       "..         ...       ...       ...       ...       ...\n",
+       "81  2917010400  36340.79  37837.61  39429.98  41022.34\n",
+       "82  2911010100  38482.75  39979.57  41571.93  43164.30\n",
+       "83  2915511100  36876.00  38372.83  39965.19  41557.55\n",
+       "84  2917010200  36340.86  37837.68  39430.05  41022.41\n",
+       "85  2915512100  36875.65  38372.47  39964.83  41557.20\n",
        "\n",
-       "[95 rows x 8 columns]"
+       "[86 rows x 5 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 데이터 불러오기\n",
-    "df = pd.read_csv('행정_법정동 중심좌표 최종 csv.csv', encoding='euc-kr')\n",
+    "df = pd.read_csv('../byeongmin/5,6모델 사용/각 연도별예측결과값.csv', encoding='euc-kr')\n",
     "df"
    ]
   },
@@ -544,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "438e1e29",
    "metadata": {},
    "outputs": [
@@ -558,9 +522,9 @@
    ],
    "source": [
     "# 데이터프레임을 JSON 파일로 내보내기\n",
-    "output_file = 'outputFinal2.json'\n",
+    "output_file = 'result2.json'\n",
     "with open(output_file, 'w', encoding='utf-8') as json_file:\n",
-    "    json_file.write(df2.to_json(orient='records', force_ascii=False, indent=2)) # indent = 줄바꿈 \n",
+    "    json_file.write(df.to_json(orient='records', force_ascii=False, indent=2)) # indent = 줄바꿈 \n",
     "print('JSON 파일이 생성되었습니다.')"
    ]
   },
