--- a/byeongmin/5,6모델 사용/모델 선정위한 여러모델 사용.ipynb
+++ b/byeongmin/5,6모델 사용/모델 선정위한 여러모델 사용.ipynb
@@ -2183,6 +2183,28 @@
     "print(f\"XGBRegressor: {model_xgb.predict(X_predict_df)[0]}\")\n",
     "print(f\"LGBMRegressor :{model_lgb.predict(X_predict_df)[0]}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "14d506cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'result_df2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mresult_df2\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m모델예측결과.csv\u001b[39m\u001b[38;5;124m'\u001b[39m,encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEUC-KR\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'result_df2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "result_df2.to_csv('모델예측결과.csv',encoding=\"EUC-KR\")"
+   ]
   }
  ],
  "metadata": {
