--- a/byeongmin/5,6모델 사용/지하철역 제거 후 선형모델을 통한 결과값 측정까지 완료.ipynb
+++ b/byeongmin/5,6모델 사용/지하철역 제거 후 선형모델을 통한 결과값 측정까지 완료.ipynb
@@ -2479,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "id": "914d948e",
    "metadata": {},
    "outputs": [],
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "id": "72b6437f",
    "metadata": {},
    "outputs": [],
@@ -2499,22 +2499,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "id": "e522c0e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_predict3 = seventh_data[['전용면적(㎡)','계약년월','층','건축나이','거래건수','기준금리','법정동코드']]"
+    "X_predict3 = seventh_data[['전용면적(㎡)','계약년월','층','건축나이','거래건수','기준금리','법정동코드']]\n",
+    "y_predict3 = seventh_data['거래금액(만원)']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 88,
    "id": "61d63fb6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "seventh_data['예측 금액']=lrmodel.predict(X_predict3)\n"
+    "seventh_data['예측 금액']=lrmodel.predict(X_predict3)\n",
+    "seventh_data['예측 금액2']= ridge.predict(X_predict3)\n",
+    "seventh_data['예측 금액3']=lasso.predict(X_predict3)\n",
+    "seventh_data['예측 금액4']=enet.predict(X_predict3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "79a504f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 13991.4143\n",
+      "R2 Score: 0.5180\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "rmse1 = mean_squared_error(y_predict3, seventh_data['예측 금액'], squared=False)\n",
+    "r2_1 = r2_score(y_predict3, seventh_data['예측 금액'])\n",
+    "\n",
+    "print(f'RMSE: {rmse1:.4f}')\n",
+    "print(f'R2 Score: {r2_1:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "05500082",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 13991.4156\n",
+      "R2 Score: 0.5180\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse2 = mean_squared_error(y_predict3, seventh_data['예측 금액2'], squared=False)\n",
+    "r2_2 = r2_score(y_predict3, seventh_data['예측 금액2'])\n",
+    "\n",
+    "print(f'RMSE: {rmse2:.4f}')\n",
+    "print(f'R2 Score: {r2_2:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "14df3d2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 13991.4150\n",
+      "R2 Score: 0.5180\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse3 = mean_squared_error(y_predict3, seventh_data['예측 금액3'], squared=False)\n",
+    "r2_3 = r2_score(y_predict3, seventh_data['예측 금액3'])\n",
+    "\n",
+    "print(f'RMSE: {rmse3:.4f}')\n",
+    "print(f'R2 Score: {r2_3:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "f7ce7c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 14003.3472\n",
+      "R2 Score: 0.5172\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse4 = mean_squared_error(y_predict3, seventh_data['예측 금액4'], squared=False)\n",
+    "r2_4 = r2_score(y_predict3, seventh_data['예측 금액4'])\n",
+    "\n",
+    "print(f'RMSE: {rmse4:.4f}')\n",
+    "print(f'R2 Score: {r2_4:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "e8d397fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>R2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>linear</td>\n",
+       "      <td>13991.414289</td>\n",
+       "      <td>0.518010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ridge</td>\n",
+       "      <td>13991.415580</td>\n",
+       "      <td>0.518010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lasso</td>\n",
+       "      <td>13991.415013</td>\n",
+       "      <td>0.518010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ElasticNet</td>\n",
+       "      <td>14003.347200</td>\n",
+       "      <td>0.517188</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Model          RMSE        R2\n",
+       "0      linear  13991.414289  0.518010\n",
+       "1       Ridge  13991.415580  0.518010\n",
+       "2       Lasso  13991.415013  0.518010\n",
+       "3  ElasticNet  14003.347200  0.517188"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_t=['linear','Ridge','Lasso',\"ElasticNet\" ]\n",
+    "rmse_t=[rmse1,rmse2,rmse3,rmse4]\n",
+    "r2_t=[r2_1,r2_2,r2_3,r2_4]\n",
+    "\n",
+    "pd.DataFrame({'Model': model_t, 'RMSE': rmse_t, 'R2': r2_t})"
    ]
   },
   {
@@ -4194,6 +4374,86 @@
    "outputs": [],
    "source": [
     "predictions.to_csv('각 연도별예측결과값.csv',encoding='EUC-KR')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "8e458f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "da497540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('linear.pkl', 'wb') as model_file:\n",
+    "    pickle.dump(lrmodel, model_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85a33516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import  LabelEncoder\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error,r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "import re\n",
+    "\n",
+    "data=pd.read_csv('../2~3.데이터 수집 및 전처리/머신러닝 전처리 데이터.CSV',encoding='EUC-KR')\n",
+    "\n",
+    "\n",
+    "def print_rmse_r2_score(model):\n",
+    "    # cv별 프린팅, 평균 저장\n",
+    "    model_name, rmse_list, r2_list = rmse_r2_cv(model)\n",
+    "    for i, (rmse, r2) in enumerate(zip(rmse_list, r2_list), start=1):\n",
+    "         print(f'{i} FOLDS: {model_name} RMSE: {rmse:.4f}, R2: {r2:.4f}')\n",
+    "    print(f'\\n{model_name} mean RMSE: {np.mean(rmse_list):.4f}, mean R2: {np.mean(r2_list):.4f}')\n",
+    "    print('='*40)\n",
+    "    return model_name, np.mean(rmse_list), np.mean(r2_list)\n",
+    "\n",
+    "def rmse_r2_cv(model):\n",
+    "    # cv별로 학습하는 함수\n",
+    "    tscv = TimeSeriesSplit(n_splits=10)\n",
+    "    rmse_list = []\n",
+    "    r2_list = []\n",
+    "    model_name = model.__class__.__name__\n",
+    "    for _, (train_index, test_index) in tqdm(enumerate(tscv.split(X), start=1), desc=f'{model_name} Cross Validations...', total=10):\n",
+    "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "        clf = model.fit(X_train, y_train)\n",
+    "        pred = clf.predict(X_test)\n",
+    "        rmse = RMSE(y_test, pred)\n",
+    "        r2 = r2_score(y_test, pred)\n",
+    "        rmse_list.append(rmse)\n",
+    "        r2_list.append(r2)\n",
+    "    return model_name, rmse_list, r2_list\n",
+    "\n",
+    "def RMSE(y, y_pred):\n",
+    "    rmse = mean_squared_error(y, y_pred) ** 0.5\n",
+    "    return rmse\n",
+    "\n",
+    "lrmodel = LinearRegression(n_jobs=-1)\n",
+    "\n",
+    "model_name, mean_rmse_score, mean_r2_score = print_rmse_r2_score(lrmodel)\n",
+    "   "
    ]
   }
  ],
